--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
+<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <!--Authentication-->
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
@@ -62,6 +60,10 @@
     <servlet>
         <servlet-name>ProductDetail</servlet-name>
         <servlet-class>control.view.detail.ProductDetail</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Validate</servlet-name>
+        <servlet-class>payment.Validate</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
@@ -231,7 +233,7 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>HomePageServlet</servlet-name>
-        <url-pattern />
+        <url-pattern/>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>FilterCPUsServlet</servlet-name>
@@ -298,6 +300,10 @@
         <url-pattern>/ssds</url-pattern>
     </servlet-mapping>
     <!-- Payment -->
+    <servlet-mapping>
+        <servlet-name>Validate</servlet-name>
+        <url-pattern>/payment/validate</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
