add and fix in view page

--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -69,6 +69,14 @@
         <servlet-name>RateProductServlet</servlet-name>
         <servlet-class>control.view.detail.RateProductServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CasesServlet</servlet-name>
+        <servlet-class>control.view.CasesServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FilterCasesServlet</servlet-name>
+        <servlet-class>control.view.search.FilterCasesServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/auth/login</url-pattern>
@@ -311,6 +319,14 @@
     <servlet-mapping>
         <servlet-name>RateProductServlet</servlet-name>
         <url-pattern>/product/rate</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CasesServlet</servlet-name>
+        <url-pattern>/CASE</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FilterCasesServlet</servlet-name>
+        <url-pattern>/FilterCase</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
