--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -27,15 +27,15 @@ jobs:
         ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
         warp-cli --accept-tos connect
 
+    - name: Run ngrok SSH
+      id: ngrok
+      uses: tmshkr/ngrok-ssh@latest
+      with:
+        SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
+        NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
+
     - name: Checkout repository
       uses: actions/checkout@v2
-
-    #- name: Run ngrok SSH
-    #  id: ngrok
-    #  uses: tmshkr/ngrok-ssh@latest
-    #  with:
-    #    SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
-    #    NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
 
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v1
