--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -27,6 +27,32 @@ jobs:
         ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
         warp-cli --accept-tos connect
 
+    - name: Reverse proxy
+      run: |
+        #Serveo - Deprecated
+        ################
+        #mkdir -p ~/.ssh
+        #touch ~/.ssh/known_hosts
+        #touch ~/.ssh/id_ed25519
+        #touch ~/.ssh/id_ed25519.pub
+        #echo "${{ secrets.SERVEO_KEY }}" > ~/.ssh/id_ed25519
+        #echo "${{ secrets.SERVEO_PUBLIC_KEY }}" > ~/.ssh/id_ed25519.pub
+        #echo "${{ secrets.SERVEO_HOST}}" > ~/.ssh/known_hosts
+        #ssh -R choice.themajorones.dev:80:localhost:8080 serveo.net &
+
+        #Cloudflare
+        ################
+        curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb -o cloudflared.deb
+        sudo dpkg -i cloudflared.deb
+        cd .server/cloudflare
+        unzip -P "CLOUDFLARE_ZIP_PASSWORD" .cloudflared.zip
+        mv .cloudflared ~/
+        cd ~/.cloudflared
+        sudo mkdir -p /etc/cloudflared
+        sudo cp * /etc/cloudflared/
+        sudo cloudflared service install
+        sudo service cloudflared start
+
     - name: Run ngrok SSH
       id: ngrok
       uses: tmshkr/ngrok-ssh@latest
@@ -70,17 +96,6 @@ jobs:
         sqlcmd -S localhost -d major -U sa -P ${{ secrets.SQLPASSWORD }} -i ./server/mssql/procedure.sql
         echo "inserting data"
         sqlcmd -S localhost -d major -U sa -P ${{ secrets.SQLPASSWORD }} -i ./server/mssql/insert.sql
-
-    - name: Reverse proxy
-      run: |
-        mkdir -p ~/.ssh
-        touch ~/.ssh/known_hosts
-        touch ~/.ssh/id_ed25519
-        touch ~/.ssh/id_ed25519.pub
-        echo "${{ secrets.SERVEO_KEY }}" > ~/.ssh/id_ed25519
-        echo "${{ secrets.SERVEO_PUBLIC_KEY }}" > ~/.ssh/id_ed25519.pub
-        echo "${{ secrets.SERVEO_HOST}}" > ~/.ssh/known_hosts
-        ssh -R choice.themajorones.dev:80:localhost:8080 serveo.net &
 
     - name: Show tomcat Logs
       timeout-minutes: 60
