--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -45,7 +45,7 @@ jobs:
         curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb -o cloudflared.deb
         sudo dpkg -i cloudflared.deb
         cd .server/cloudflare
-        unzip -P "CLOUDFLARE_ZIP_PASSWORD" .cloudflared.zip
+        unzip -P 'CLOUDFLARE_ZIP_PASSWORD' .cloudflared.zip
         mv .cloudflared ~/
         cd ~/.cloudflared
         sudo mkdir -p /etc/cloudflared
