--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -30,9 +30,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Docker Build
-      uses: docker/setup-buildx-action@v1
-
     #- name: Run ngrok SSH
     #  id: ngrok
     #  uses: tmshkr/ngrok-ssh@latest
@@ -47,13 +44,16 @@ jobs:
         curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb -o cloudflared.deb
         sudo dpkg -i cloudflared.deb
         cd server/cloudflare
-        unzip -P 'CLOUDFLARE_ZIP_PASSWORD' .cloudflared.zip
+        unzip -P "CLOUDFLARE_ZIP_PASSWORD" .cloudflared.zip
         mv .cloudflared ~/
         cd ~/.cloudflared
         sudo mkdir -p /etc/cloudflared
         sudo cp * /etc/cloudflared/
         sudo cloudflared service install
         sudo service cloudflared start
+
+    - name: Set up Docker Build
+      uses: docker/setup-buildx-action@v1
 
     - name: Set up Docker
       run: |
