--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ server/tomcat/nbproject/private/
 server/tomcat/nbproject/genfiles.properties
 server/tomcat/nbproject/build-impl.xml~
 server/tomcat/build/
+server/tomcat/dist/
 server/tomcat/nbbuild/
 server/tomcat/nbdist/
 server/tomcat/nbactions.xml
