--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -85,6 +85,14 @@
         <servlet-name>ReportServlet</servlet-name>
         <servlet-class>control.report.ReportServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ViewListFavorServlet</servlet-name>
+        <servlet-class>control.favor.ViewListFavorServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EditFavorServlet</servlet-name>
+        <servlet-class>control.favor.EditFavorServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/auth/login</url-pattern>
@@ -343,6 +351,14 @@
     <servlet-mapping>
         <servlet-name>ReportServlet</servlet-name>
         <url-pattern>/stats</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ViewListFavorServlet</servlet-name>
+        <url-pattern>/favor</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditFavorServlet</servlet-name>
+        <url-pattern>/editFavor</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
