--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Setup MSSQL database
       run: | 
-        docker cp server/mssql/* mssql:/root
+        docker cp server/mssql/. mssql:/root
         docker exec mssql /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i /root/reset.sql
         docker exec mssql /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i /root/table.sql
         docker exec mssql /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i /root/procedure.sql
