--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -27,11 +27,11 @@ jobs:
 
     - name: Setup MSSQL database
       run: | 
-        docker cp server/mssql/. mssql:/root
-        docker exec mssql /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i /root/reset.sql
-        docker exec mssql /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i /root/table.sql
-        docker exec mssql /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i /root/procedure.sql
-        docker exec mssql /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i /root/insert.sql
+        docker cp server/mssql/. mssql:/tmp
+        docker exec mssql /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i /tmp/reset.sql
+        docker exec mssql /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i /tmp/table.sql
+        docker exec mssql /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i /tmp/procedure.sql
+        docker exec mssql /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i /tmp/insert.sql
 
     - name: Build Tomcat Docker Image
       run: |
